# learning-system

./: .env.example  .gitignore  adaptive_private_tutor_v1_architecture.md  design-qa.md  docker-compose.yml  project_completeness_audit_2026-06-25.md  pyproject.toml
backend/: Dockerfile  alembic.ini
backend/alembic/: env.py
backend/app/: auth.py  db.py  main.py  mcp_server.py  models.py  schemas.py  worker.py
backend/app/routers/: goals.py  (+8 more)
docs/project_division/: 00_project_division_index.md  01_product_curriculum_and_diagnosis.md  02_backend_api_and_learning_domain.md  03_state_knowledge_base_and_database.md  04_langgraph_and_agents.md  05_rag_document_ingestion.md  06_assessment_mastery_and_replanning.md  07_frontend_learning_experience.md  08_mcp_llm_gateway_and_deployment.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: app-build-manifest.json  trace
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: learning-pages.tsx  learning-provider.tsx  learning-shell.tsx
frontend/lib/: api.ts  learning-data.ts
frontend/scripts/: verify-ui-routes.mjs
src/adaptive_tutor/: __init__.py
tests/: conftest.py  test_alembic_migration.py  test_api_workflow.py  test_database_state.py  test_diagnosis_rules.py  test_document_ingestion_worker.py  test_learning_evidence_replan_application.py  test_migrated_api_workflow.py  test_p0_auth_and_runtime.py  test_stage3_api_workflow.py  test_stage3_gateway_tools.py
tests/phase2/: test_phase2_contracts.py  test_phase2_engine.py  test_phase2_rag_assessment.py
(+83 files in other folders)
