[project]
name = "adaptive-private-tutor-stage1"
version = "0.1.0"
description = "Stage 1 backend for the adaptive private tutor learning loop."
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13",
    "celery[redis]>=5.4",
    "fastapi>=0.110",
    "httpx>=0.27",
    "langgraph>=1.2",
    "mcp[cli]>=1.27,<2",
    "minio>=7.2",
    "pillow>=10.0",
    "psycopg[binary]>=3.2",
    "pytesseract>=0.3",
    "pypdf>=4",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["backend*", "adaptive_tutor*"]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
